<resources>
    <string name="app_name">unSmoke</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="esqueciASenha">Esqueci a senha</string>
    <string name="entrar">Entrar</string>
    <string name="cadastre_Se">Cadastre-se</string>
    <string name="logoDoAplicativoUnsmoke">Logo do aplicativo unSmoke</string>
    <string name="crieSuaConta">Crie sua conta!</string>
    <string name="digiteSeuNomeCompleto">Digite seu nome completo</string>
    <string name="digiteSeuTelefone">Digite seu telefone</string>
    <string name="digiteSeuEmail">Digite seu e-mail</string>
    <string name="digiteSuaSenha">Digite sua senha</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="padroesDeUso">Padrões de uso</string>
    <string name="preencha_todas_as_perguntas_para_prosseguir">Preencha todas as perguntas para \n prosseguir</string>
    <string name="quantos_cigarros_voce_fuma_em_m_dia_por_dia">Quantos cigarros você \n fuma em média por dia ?</string>
    <string name="quanto_custa_seu_ma_o_de_cigarro">Quanto custa seu maço de\ncigarro?</string>
    <string name="quantos_minutos_gasta_n_para_fumar_um_cigarro">Quantos minutos gasta \n para fumar um cigarro?</string>
    <string name="finalizar">Finalizar</string>
    <string name="ver_progresso">Ver progresso</string>
    <string name="contagem_de_fumo">Contagem de fumo</string>
    <string name="clique_aqui_ao_fumar">Clique aqui ao fumar:</string>
    <string name="n_o_fumar_durante_1_dia">Não fumar durante 1 dia.</string>
    <string name="metas">Metas</string>
    <string name="botao_fumar">Aperte neste botão para registrar o seu fumo</string>
    <string name="quantidade_total">Quantidade total</string>
    <string name="quantidade_mensal">Quantidade mensal</string>
    <string name="quantidade_diaria">Quantidade diária</string>
    <string name="foto_de_perfil_do_usu_rio">Foto de perfil do usuário</string>
    <string name="nome_do_usu_rio">Nome do usuário</string>
    <string name="suas_medalhas">Suas medalhas</string>
    <string name="tipos_de_fumo_que_voc_utiliza">Tipos de fumo que você utiliza</string>
    <string name="marcas_de_fumo_que_voc_utiliza">Marcas de fumo que você utiliza</string>
    <string name="progresso">Progresso</string>
    <string name="dia_tals">Dia tals</string>
    <string name="tempo_de_vida_reduzido">Tempo de vida reduzido</string>
    <string name="_1d_12h_8m">1d 12h 8m</string>
    <string name="s_mbolo_tempo_de_vida_reduzido">Símbolo tempo de vida reduzido</string>
    <string name="dinheiro_gasto">Dinheiro Gasto</string>
    <string name="s_mbolo_dinheiro_economizado">Símbolo dinheiro economizado</string>
    <string name="r_7_000_00">R$ 7.000,00</string>
    <string name="livre_de_fumar">Livre de fumar</string>
    <string name="s_mbolo_livre_de_fumar">Símbolo livre de fumar</string>
    <string name="quantidade_de_cigarros">Quantidade de cigarros</string>
    <string name="_1_100">1.100</string>
    <string name="s_mbolo_quantidade_de_cigarros">Símbolo quantidade de cigarros</string>
    <string name="registro_de_fumo">Registro de fumo:</string>
    <string name="tipo_do_cigarro">Tipo do cigarro:</string>
    <string name="dura_o_minutos">Duração (minutos):</string>
    <string name="logo_unsmoke">Logo unSmoke</string>
    <string name="voltar_para_tela_inicial">Voltar para a tela inicial</string>
    <string name="voc_chegou_ao_ponto_di_rio_de_uso_excessivo_de_fumo">Você chegou ao ponto diário de uso excessivo de fumo!</string>
    <string name="deslogar">Fazer logout</string>
</resources>