<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#717F45"
    tools:context=".TelaCadastro">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="210dp"
        android:layout_marginEnd="50dp"
        android:fontFamily="@font/arbutus_slab"
        android:text="@string/crieSuaConta"
        android:textColor="@color/bege_pastel"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/logoDoAplicativoUnsmoke"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cigarrete2" />

    <EditText
        android:id="@+id/nomeCompleto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/caixa_cadastro"
        android:ems="10"
        android:hint="@string/digiteSeuNomeCompleto"
        android:inputType="textPersonName"
        android:paddingLeft="15dp"
        android:paddingTop="16dp"
        android:paddingRight="15dp"
        android:paddingBottom="16dp"
        android:textColor="#44270D"
        android:textColorHint="#B344270D"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        android:autofillHints="" />

    <EditText
        android:id="@+id/telefone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/caixa_cadastro"
        android:ems="10"
        android:hint="@string/digiteSeuTelefone"
        android:inputType="number|phone"
        android:maxLength="11"
        android:paddingLeft="15dp"
        android:paddingTop="16dp"
        android:paddingRight="15dp"
        android:paddingBottom="16dp"
        android:textColor="#44270D"
        android:textColorHint="#B344270D"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nomeCompleto"
        android:autofillHints="" />

    <EditText
        android:id="@+id/emailCadastro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/caixa_cadastro"
        android:ems="10"
        android:hint="@string/digiteSeuEmail"
        android:inputType="textEmailAddress"
        android:paddingLeft="15dp"
        android:paddingTop="16dp"
        android:paddingRight="15dp"
        android:paddingBottom="16dp"
        android:textColor="#44270D"
        android:textColorHint="#B344270D"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/telefone"
        android:autofillHints="" />

    <EditText
        android:id="@+id/senhaCadastro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/caixa_cadastro"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/digiteSuaSenha"
        android:inputType="textPassword"
        android:paddingLeft="15dp"
        android:paddingTop="16dp"
        android:paddingRight="15dp"
        android:paddingBottom="16dp"
        android:textColor="#44270D"
        android:textColorHint="#B344270D"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailCadastro"
        android:autofillHints="" />

    <CheckBox
        android:id="@+id/mostrarSenhaCadastro"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:button="@drawable/ic_outline_remove_red_eye_24"
        android:buttonTint="#44270D"
        android:onClick="mostrarSenha"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/senhaCadastro"
        app:layout_constraintEnd_toEndOf="@+id/senhaCadastro"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/senhaCadastro"
        app:layout_constraintTop_toTopOf="@+id/senhaCadastro" />

    <Button
        android:id="@+id/criarConta"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="44dp"
        android:backgroundTint="#44270D"
        android:fontFamily="@font/arbutus_slab"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/cadastrar"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/senhaCadastro"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>