<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bege_pastel"
    tools:context=".TelaLogin">

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="380dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/container_components"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/emailLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="240dp"
        android:background="@drawable/caixa_login"
        android:drawableEnd="@drawable/ic_outline_email_24"
        android:ems="10"
        android:fontFamily="@font/actor"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="#80FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/textView20"
        app:layout_constraintStart_toStartOf="@id/textView20"
        app:layout_constraintTop_toTopOf="@+id/textView20"
        app:layout_constraintVertical_bias="0.0"
        android:autofillHints="" />

    <EditText
        android:id="@+id/senhaLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/caixa_login"
        android:ems="10"
        android:fontFamily="@font/actor"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:textColor="@color/white"
        android:textColorHint="#80FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@id/textView20"
        app:layout_constraintStart_toStartOf="@id/textView20"
        app:layout_constraintTop_toBottomOf="@+id/emailLogin"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="22dp"
        android:fontFamily="@font/actor"
        android:onClick="recuperarSenha"
        android:paddingLeft="6dp"
        android:paddingTop="4dp"
        android:paddingRight="6dp"
        android:paddingBottom="4dp"
        android:text="@string/esqueciASenha"
        android:textColor="#000000"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="@id/textView20"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textView20"
        app:layout_constraintTop_toBottomOf="@+id/senhaLogin"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="#283618"
        android:fontFamily="@font/actor"
        android:onClick="AutenticarUsuario"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/entrar"
        android:textAllCaps="false"
        android:textColor="@color/bege_pastel"
        android:textSize="19sp"
        android:textStyle="bold"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="@id/textView20"
        app:layout_constraintStart_toStartOf="@id/textView20"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="12dp"
        android:fontFamily="@font/actor"
        android:onClick="irTelaCadastro"
        android:paddingBottom="5dp"
        android:text="@string/cadastre_Se"
        android:textColor="@color/bege_pastel"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView20"
        app:layout_constraintEnd_toEndOf="@id/textView20"
        app:layout_constraintStart_toStartOf="@id/textView20"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/logoDoAplicativoUnsmoke"
        app:layout_constraintBottom_toTopOf="@id/textView20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/unsmoke_logo" />

    <CheckBox
        android:id="@+id/mostrarSenhaLogin"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:button="@drawable/ic_outline_remove_red_eye_24"
        android:buttonTint="#FEFAE0"
        android:onClick="mostrarSenha"
        app:layout_constraintBottom_toBottomOf="@+id/senhaLogin"
        app:layout_constraintEnd_toEndOf="@+id/senhaLogin"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/senhaLogin"
        app:layout_constraintTop_toTopOf="@+id/senhaLogin" />

</androidx.constraintlayout.widget.ConstraintLayout>